--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "Hackhers is organized for women. At this hackathon, women and men 
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary:  66ccff #80B3FF
-  secondary:  6e256e #609732 #FD6E8A #66ccff
+  secondary:  721794 #6e256e #609732 #FD6E8A #66ccff
   secondary-dark: 66ccff #A2122F
   
 # Footer settings
