--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ footer:
 social:
   - title: facebook
     url: https://www.facebook.com/groups/RutgersWCS/
+  - title: twitter
+    url: https://twitter.com/ruhackhers
 
 # Postal address (add as many lines as necessary)
 address:
